# pytest-gitscope

./: README.md  pyproject.toml
src/pytest_accurate/: plugin.py  selector.py
src/pytest_gitscope/: plugin.py  selector.py
