[project]
name = "pytest-gitscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Xavier Barbosa", email = "clint.northwood@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pytest>=8.4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.17.1", "pytest>=8.4.1", "ruff>=0.12.9"]

[project.entry-points.pytest11]
git_diff = "pytest_accurate.plugin"

[tool.ruff]

[tool.ruff.lint]
extend-select = ["I"]
